--- a/public/todo.html
+++ b/public/todo.html
@@ -10,12 +10,15 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 
-<body onload="getTasks(true)">
+<body onload="getTasks()">
 
     <nav class="navbar navbar-dark bg-dark">
-        <div class="navbar-brand container-fluid justify-content-center">
+        <div class="navbar-brand container-fluid justify-content-space-between">
+            <span id="email"></span>
             <h2>TO-DO APP</h2>
+            <button class="navbar-brand btn btn-danger btn-small" id="logout" style="color: white;" href="/">Logout</button>
         </div>
+        
     </nav>
     
     <div class="container mt-5 ">
